src/app/modules/portfolio/components/technologies/technologies.component.scss
.technologies {

    display: flex;
    flex-direction: column;
    gap: 2rem;

    padding: 100px 30px; 

    .intro-container {
        display: flex;

        .intro {

            h2 {
                font-size: 3rem;
                letter-spacing: 0.25rem;
                color: var(--primary-font);
            }
        
            p {
                color: var(--primary-font);
                font-size: 1.5rem;
                letter-spacing: 0.25rem;
            }
        }
    
        .bg {
            z-index: 1;
            position: relative;
            top: -50px;


            img {
                filter: opacity(15%), ;
                max-width: 500px;
                height: 300px;
            }
        }
    }

    .tech {

        display: flex;
        flex-direction: column;
        gap: 1.5rem;

        width: 100%;

        .tech-title {
            letter-spacing: 0.25rem;
            color: #FAFAFA;
        }

        .app-tech-slider {
            width: 100%;
            padding: 1500px;
        }
    }
}

@media (max-width: 750px) {
    .technologies {

        padding: 100px 20px; 

        .intro-container {

            .intro {

                h2 {
                    font-size: 2rem;
                    letter-spacing: 0.25rem;
                    color: var(--primary-font);
                }
            
                p {
                    color: var(--primary-font);
                    font-size: 1rem;
                    letter-spacing: 0.25rem;
                }
            }
        
            .bg {
                display: none;
            }
        }
    }
}

